# chefui-gtk

./: Cargo.toml  build.rs  chef.glade  chef.sqlite
chef/1/resources/: chef.ui  chef.xml  resources.gresource.xml  window.ui
src/: main.rs  rustfmt.toml
src/action/: action.rs  mod.rs
src/collection/: co.rs  mod.rs
src/cuisine/: cuisine.rs  mod.rs
src/food/: food.rs  mod.rs
src/food_collection/: mod.rs
src/ingredient/: ingredient.rs  mod.rs
src/ingredient_collection/: ingredient_collection.rs  mod.rs
src/recipe/: mod.rs  recipe.rs
src/recipe_collection/: mod.rs  recipe_collection.rs
src/window/: mod.rs  window.rs
