[package]
name = "gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
glib-build-tools = "0.19.0"
